--- a/styles.css
+++ b/styles.css
@@ -1,126 +1,166 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
-#grid-container{
+
+#grid-container {
     display: grid;
     grid-template-columns: 10vw 10vw 10vw 10vw 10vw 10vw 10vw 10vw 10vw 10vw;
     grid-template-rows: 10vw 10vw 10vw 10vw 10vw 10vw;
 }
-.orange1{
+
+.orange1 {
     grid-column: 1/3;
-    grid-row: 1/1 ;
+    grid-row: 1/1;
     background-color: darkorange;
 }
-.orange2{
+
+.orange2 {
     grid-column: 1/1;
     grid-row: 2/6;
     background-color: darkorange;
 }
-.orange3{
+
+.orange3 {
     grid-column: 1/3;
     grid-row: 6/7;
     background-color: darkorange;
 }
-.orange4{
+
+.orange4 {
     grid-column: 2/3;
     grid-row: 3/5;
     background-color: darkorange;
 }
-.orange5{
+
+.orange5 {
     grid-column: 9/11;
-    grid-row: 1/1 ;
+    grid-row: 1/1;
     background-color: darkorange;
 }
-.orange6{
+
+.orange6 {
     grid-column: 10/11;
     grid-row: 2/6;
     background-color: darkorange;
 }
-.orange7{
+
+.orange7 {
     grid-column: 9/11;
     grid-row: 6/7;
     background-color: darkorange;
 }
-.orange8{
+
+.orange8 {
     grid-column: 9/10;
     grid-row: 3/5;
     background-color: darkorange;
 }
-.purple1{
+
+.purple1 {
     grid-column: 3/4;
     grid-row: 1/7;
     background-color: purple;
 }
-.purple2{
-    grid-column: 2/3 ;
+
+.purple2 {
+    grid-column: 2/3;
     grid-row: 2/3;
     background-color: purple;
 }
-.purple3{
-    grid-column: 2/3 ;
+
+.purple3 {
+    grid-column: 2/3;
     grid-row: 5/6;
     background-color: purple;
 }
-.purple4{
-    grid-column: 8/9 ;
+
+.purple4 {
+    grid-column: 8/9;
     grid-row: 1/7;
     background-color: purple;
 }
-.purple5{
-    grid-column: 9/10 ;
+
+.purple5 {
+    grid-column: 9/10;
     grid-row: 2/3;
     background-color: purple;
 }
-.purple6{
-    grid-column: 9/10 ;
+
+.purple6 {
+    grid-column: 9/10;
     grid-row: 5/6;
     background-color: purple;
 }
-.yellow1{
-    grid-column: 4/5 ;
+
+.yellow1 {
+    grid-column: 4/5;
     grid-row: 1/3;
     background-color: yellow;
 }
-.yellow2{
-    grid-column: 4/5 ;
+
+.yellow2 {
+    grid-column: 4/5;
     grid-row: 5/7;
     background-color: yellow;
 }
-.yellow3{
-    grid-column: 4/8 ;
+
+.yellow3 {
+    grid-column: 4/8;
     grid-row: 3/5;
     background-color: yellow;
 }
-.yellow4{
-    grid-column: 7/8 ;
+
+.yellow4 {
+    grid-column: 7/8;
     grid-row: 1/3;
     background-color: yellow;
 }
-.yellow5{
-    grid-column: 7/8 ;
+
+.yellow5 {
+    grid-column: 7/8;
     grid-row: 5/7;
     background-color: yellow;
 }
-.red1{
-    grid-column: 5/7 ;
+
+.red1 {
+    grid-column: 5/7;
     grid-row: 1/3;
     background-color: red;
 }
-.red2{
-    grid-column: 5/7 ;
+
+.red2 {
+    grid-column: 5/7;
     grid-row: 5/7;
     background-color: red;
 }
+
 .yellowtext {
-    grid-column: 6/8 ;
+    grid-column: 6/8;
     grid-row: 3/4;
-    font-size: 1vw;
+    font-size: 20px;
     text-align: center;
     margin-top: 50%;
 }
-.orangeyear{
-    grid-column: 9/10 ;
+
+.orangeyear {
+    grid-column: 9/10;
     grid-row: 1/1;
-    font-size: 2vw;
+    font-size: 25px;
+}
+
+.purpletext {
+    grid-column: 3/4;
+    grid-row: 1/1;
+    
+   
+
+}
+
+#abstraction {
+    transform: rotate(90deg);
+    font-size: 15px;
+    margin-top: 50px;
+    
+
 }
